tests/ui/array-slice-vec/vector-no-ann.rs
fn main() {
    let _foo = Vec::new();
    //~^ ERROR type annotations needed
}
